productions/veadk/archives/1.0.0/zh/components/tools/code-sandbox.mdx
---
title: "代码沙箱"
en_link: "/productions/veadk/archives/1.0.0/en/components/tools/code-sandbox"
---

## 功能说明

VeADK 提供一组在 [AgentKit 沙箱](https://console.volcengine.com/agentkit)中远程执行任务的工具：

| 工具 | 说明 |
| :--- | :--- |
| `run_code` | 执行任意代码，适合计算、数据处理等 |
| `execute_skills` | 在预制技能沙箱中运行 `agent.py` 工作流 |
| `coding` | 在 OpenCode 沙箱中运行代码生成工作流 |
| `run_sandbox_agent` | 指定任意 `tool_id` 在远端沙箱执行 `agent.py` |

导入路径：

- `from veadk.tools.builtin_tools.run_code import run_code`
- `from veadk.tools.builtin_tools.execute_skills import execute_skills`
- `from veadk.tools.builtin_tools.coding import coding`
- `from veadk.tools.builtin_tools.run_sandbox_agent import run_sandbox_agent`

## 环境变量与前提

<Warning>
附加要求：

1. 配置火山引擎 AK / SK；
2. 配置用于智能体推理模型的 API Key；
3. 配置 AgentKit Tool ID（见下文）。
</Warning>

环境变量：

- `MODEL_AGENT_API_KEY`：智能体推理模型的 API Key
- `VOLCENGINE_ACCESS_KEY` / `VOLCENGINE_SECRET_KEY`：火山引擎 AK / SK
- `AGENTKIT_TOOL_ID`：默认 AgentKit 沙箱 ID，作为所有沙箱工具的兜底配置
- `AGENTKIT_TOOL_ID_SCRIPT`：`run_code` 专用沙箱 ID，未配置时回退到 `AGENTKIT_TOOL_ID`
- `AGENTKIT_TOOL_ID_SKILLS`：`execute_skills` 专用沙箱 ID，未配置时回退到 `AGENTKIT_TOOL_ID`
- `AGENTKIT_TOOL_ID_OPENCODE`：`coding` 专用沙箱 ID，未配置时回退到 `AGENTKIT_TOOL_ID`
- `AGENTKIT_TOOL_HOST`：调用 AgentKit Tools 的 Endpoint
- `AGENTKIT_TOOL_SERVICE_CODE`：调用 AgentKit Tools 的 ServiceCode

`config.yaml` 配置项：

```yaml title="config.yaml" lines
agentkit:
  tool_id: your-default-tool-id
  tool_id_script: your-script-tool-id
  tool_id_skills: your-skills-tool-id
  tool_id_opencode: your-opencode-tool-id
```

创建沙箱：

<Steps>

<Step title="创建沙箱工具">
在控制台创建沙箱工具：自定义名称（如 `AIO_Sandbox_xxxx`），工具集类型选择“一体化工具集”，包含 Browser、Terminal、Code 运行环境。
</Step>

<Step title="获取沙箱 ID">
创建完成后，在控制台获取沙箱 ID（形如 `t-ye8dj82xxxxx`），填入上面的环境变量或 `config.yaml`。
</Step>

</Steps>

## 使用方法

```python title="examples/tools/run_code/agent.py" lines
import asyncio

from veadk import Agent, Runner
from veadk.memory.short_term_memory import ShortTermMemory
from veadk.tools.builtin_tools.run_code import run_code
from veadk.tools.builtin_tools.web_search import web_search

agent = Agent(
    name="data_analysis_agent",
    model_name="doubao-seed-1-8-251228",
    description="A data analysis agent for the stock market.",
    instruction=(
        "你是一名资深工程师，在沙箱中执行代码。可使用 web_search 搜索公司经营数据，"
        "可使用 akshare 等库下载股票数据；缺失依赖时用代码在沙箱中安装。"
    ),
    tools=[run_code, web_search],
)

runner = Runner(agent=agent, short_term_memory=ShortTermMemory())


async def main():
    response = await runner.run("分析阳光电源最近的股价走势")
    print(response)


if __name__ == "__main__":
    asyncio.run(main())
```
